# cppMinecraft

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  main.cpp  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup_cache/: action.yml
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  macos-sonarcloud.yml  template-janitor.yml
Minecraft/: CMakeLists.txt  main.cpp
Minecraft/include/Minecraft/: Shader.hpp
Minecraft/resources/texture/: License
Minecraft/src/: App.cpp  Shader.cpp
cmake/: Cache.cmake  Common.cmake  CompilerWarnings.cmake  Conan.cmake  Cuda.cmake  Doxygen.cmake  DynamicProjectOptions.cmake  Index.cmake  Linker.cmake  Optimization.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Standards.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake  Vcpkg.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
